template-block-nonharbor.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredharbor
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredHarbor
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredharbor

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, "harbor.local")
          msg := sprintf("La imagen '%v' no está en Harbor.", [container.image])
        }
